# nb-smith

./: .gitignore  README.md  analysis.ipynb  pyproject.toml
.claude/: memory  memory.md
src/cli/: main.py
src/smithy/: __init__.py  _shared.py  assay.py  cast.py  cupel.py  smelt.py
src/tools/: notebook.py
