[project]
name = "nb-smith"
version = "0.1.0"
description = "CLI-powered agent for auditing and cleaning Jupyter notebooks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Muhammad Omar Muhdhar", email = "muhammadomarmuhdhar@gmail.com" }
]
keywords = ["jupyter", "notebook", "data-cleaning", "data-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer[all]>=0.12.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[project.scripts]
nb-smith = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smithy", "src/cli", "src/tools"]

[tool.ruff]
target-version = "py310"

[tool.mypy]
python-version = "3.10"